--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;1,400&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="reset.css" />
   <link rel="stylesheet" href="style.css" />
-  <title>Tu nombre aquí</title>
-</head>
+  <title>Dani-Ald</title>
+  <style>
+    /* Estilo para el fondo negro */
+    body {
+      background-color: black;
+      color: white; /* Cambiar el color del texto a blanco para que sea legible */
+    }
 
+    /* Estilo para los botones rojos */
+    .btn {
+      background-color: red;
+      color: white;
+    }
+
+    /* Estilo para el enlace en el pie de página */
+    .footer a {
+      color: red; /* Cambiar el color del enlace a rojo */
+    }
+  </style>
+</head>
 <body>
   <main>
     <div class="avatar">
@@ -29,10 +44,8 @@
       </a>
     </div>
     <div class="divider"></div>
-    <footer class="footer">Para contactarme enviar un email a <a
-        href="mailto:johnnie@codealo.dev">johnnie@codealo.dev</a>
+    <footer class="footer">Mi Intagram <a href="https://instagram.com/this_is_dani_ald._.l?igshid=MzRlODBiNWFlZA==">this_is_dani_ald._.l</a>
     </footer>
   </main>
 </body>
-
 </html>
