--- a/index.html
+++ b/index.html
@@ -6,46 +6,36 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="reset.css" />
   <link rel="stylesheet" href="style.css" />
-  <title>Dani-Ald</title>
+  <title style="color: #f30404;" >Dani-Ald</title>
   <style>
     /* Estilo para el fondo negro */
     body {
       background-color: black;
       color: white; /* Cambiar el color del texto a blanco para que sea legible */
-    }
-
-    /* Estilo para los botones rojos */
-    .btn {
-      background-color: red;
-      color: white;
+      font-family: 'Roboto', sans-serif; /* Aplicar la fuente Roboto */
     }
 
     /* Estilo para el enlace en el pie de página */
     .footer a {
       color: red; /* Cambiar el color del enlace a rojo */
     }
+
+
   </style>
 </head>
 <body>
   <main>
+    <h1 style="color: #FF0000;">Bienvenido!</h1>
+    <Br></br>
     <div class="avatar">
       <img src="/assets/avatar.jpg" class="avatar-img" />
     </div>
-    <h1>This is Dani Ald</h1>
-    <div class="btn-group">
-      <a href="/">
-        <div class="btn">GitHub</div>
-      </a>
-      <a href="/">
-        <div class="btn">Página Web</div>
-      </a>
-      <a href="/">
-        <div class="btn">YouTube</div>
-      </a>
-    </div>
+    <h1 style="color: #FF0000;">This is Dani Ald</h1>
+    
+    
+
     <div class="divider"></div>
-    <footer class="footer">Mi Intagram <a href="https://instagram.com/this_is_dani_ald._.l?igshid=MzRlODBiNWFlZA==">this_is_dani_ald._.l</a>
-    </footer>
+    <footer style="color: #FFFFFF;", class="footer">Mi Instagram <a href="https://instagram.com/this_is_dani_ald._.l?igshid=MzRlODBiNWFlZA==">this_is_dani_ald._.l</a></footer>
   </main>
 </body>
 </html>
