--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="style.css" />
   <title style="color: #f30404;" >Dani-Ald</title>
   <style>
-    /* Estilo para el fondo negro */
+    /* Estilo para el fondo */
     body {
       background-color: black;
       color: white; 
-      font-family: 'Roboto', sans-serif; /* Aplicar la fuente Roboto */
+      font-family: 'Roboto', sans-serif; /*Estilo de fuente */
     }
 
     /* Estilo para el enlace en el pie de página */
@@ -24,13 +24,13 @@
     .white-div-container {
       display: flex;
       justify-content: space-between; /* Separar los divs horizontalmente */
-      margin-top: 30px; /* Aumenta el espacio entre "Mi Instagram" y los divs */
+      margin-top: 30px; 
     }
 
     /* Estilo para los divs blancos */
     .white-div {
       background-color: white;
-      width: 500px; /* Ancho de cada div en píxeles (ajusta según tus necesidades) */
+      width: 500px; /* Ancho de cada div en píxeles  */
       padding: 15px;
       border: 5px solid rgb(153, 153, 153); /* Borde opcional */
       margin-right: 20px; /* Separación entre los divs */
@@ -51,24 +51,48 @@
     <div class="divider"></div>
     <footer style="color: #ffffff;", class="footer">Mi Instagram <a href="https://instagram.com/this_is_dani_ald._.l?igshid=MzRlODBiNWFlZA==">this_is_dani_ald._.l</a></footer>
  
-  <!-- Contenedor para los divs blancos -->
   <div class="white-div-container">
-    <!-- Div "Intereses" -->
     <div class="white-div">
       <center><h2 style="color: #FF0000;">Intereses</h2></center>
-      <p>Aquí puedes escribir información sobre tus intereses.</p>
+      <p>
+        🜂 Programacion
+        <br/>
+        🜂 Tecnologia
+        <br/>
+        🜂 Inteligencia Artificial
+        <br/>
+        🜂 Gaming
+        <br/>
+      </p>
     </div>
-    <!-- Div "Gustos" -->
+
+    
     <div class="white-div">
       <center><h2 style="color: #FF0000;">Gustos</h2></center>
-      <p>Comparte tus gustos y preferencias en esta sección.</p>
+      <p>
+        🜂 Rocket League
+        <br/>
+        🜂 FallGuys
+        <br/>
+        🜂 Naturaleza
+        <br/>
+        🜂 Fiesta
+      </p>
     </div>
-    <!-- Div "Actualidad" -->
+
+    
     <div class="white-div">
       <center><h2 style="color: #FF0000;">Metas</h2></center>
-      <p>Mantén a tus seguidores al tanto de tus actividades recientes.</p>
+      <p>
+        🜂 Ser CIO de mi propia app movil
+        <br/>
+        🜂 Ser Millonario
+      </p>
     </div>
+
   </div>
+
+
   </main>
 </body>
 </html>
