--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
   <main>
-    <h1 style="color: #FF0000;">Pueba para ver si jala!</h1>
+    <h1 style="color: #FF0000;">Bienvenido!</h1>
     <div class="avatar">
       <img src="/assets/avatar.jpg" class="avatar-img" />
     </div>
@@ -54,6 +54,7 @@
   <div class="white-div-container">
     <div class="white-div">
       <center><h2 style="color: #FF0000;">Intereses</h2></center>
+      <br/>
       <p>
         🜂 Programacion
         <br/>
@@ -69,6 +70,7 @@
     
     <div class="white-div">
       <center><h2 style="color: #FF0000;">Gustos</h2></center>
+      <br/>
       <p>
         🜂 Rocket League
         <br/>
@@ -83,6 +85,7 @@
     
     <div class="white-div">
       <center><h2 style="color: #FF0000;">Metas</h2></center>
+      <br/>
       <p>
         🜂 Ser CIO de mi propia app movil
         <br/>
