Cambbio de foto de perfil

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <main>
     <h1 style="color: #FF0000;">Bienvenido!</h1>
     <div class="avatar">
-      <img src="/assets/avatar.jpg" class="avatar-img" />
+      <img src="/assets/DANIEL.jpg" class="avatar-img" />
     </div>
     <h1 style="color: #FF0000;">This is Dani Ald</h1>
     <div class="divider"></div>
